Do not land (yet) [Monorail] Expose Buganizer information for Googlers
Bug: monorail:5856
Change-Id: Id0e83fbc8e81ab3506dd355c7ab27ee108692246

--- a/appengine/monorail/Makefile
+++ b/appengine/monorail/Makefile
@@ -67,7 +67,7 @@ test_coverage:
 # Commands for running locally using dev_appserver.
 serve: config_local
 	@echo "---[Starting SDK AppEngine Server]---"
-	$(GAE_PY) devserver -- $(DEV_APPSERVER_FLAGS)& $(WEBPACK_PATH) --watch
+	$(GAE_PY) devserver -- --port=8000 --admin_port=9000 $(DEV_APPSERVER_FLAGS)& $(WEBPACK_PATH) --watch
 
 serve_email: config_local
 	@echo "---[Starting SDK AppEngine Server]---"
