[tricium] Remove uses_shflags from shellcheck analyzer
Since crrev.com/c/1714095, shflags behavior is always enabled.
crrev.com/c/1715043 removes the flag from command-line invocations.
Remove it from the analyzer so that some future update can eventually
remove it from shellcheck.

Bug: 898564
Test: make testrun; PATH=$PWD/bin/shellcheck:$PATH make test
Change-Id: If5aa7e4ff177d831b5709638887a22f4b027f67f

--- a/go/src/infra/tricium/functions/shellcheck/Makefile
+++ b/go/src/infra/tricium/functions/shellcheck/Makefile
@@ -18,7 +18,7 @@ test: bin
 	go test .
 
 testrun: shellcheck_tricium bin
-	./shellcheck_tricium -input=testdata -output=testout -uses_shflags -path_filters="*.sh"
+	./shellcheck_tricium -input=testdata -output=testout -path_filters="*.sh"
 
 clean:
 	rm -rf shellcheck-*.tbz2 shellcheck-*.xz shellcheck_tricium bin testout
