Roll recipe dependencies (nontrivial).
This is an automated CL created by the recipe roller. This CL rolls recipe
changes from upstream projects (e.g. depot_tools) into downstream projects
(e.g. tools/build).


Please review the expectation changes, and LGTM+CQ.


More info is at https://goo.gl/zkKdpD. Use https://goo.gl/noib3a to file a bug.
build:
  https://crrev.com/a043fe59729b66e845105334f159f3244c7dbcf3 sdk_packager: fix missing sys import. (jbudorick@chromium.org)
  https://crrev.com/8602a7f00fd10ea1a9c22487e9a23f557d260144 sdk_packager: fix json output file opening. (jbudorick@chromium.org)
  https://crrev.com/624ee989154783ad7074fd9ad9648aa55bb45484 Revert "Refactor mb gen step to return failure messages rather than raise them." (debrian@google.com)
  https://crrev.com/d35e025d9d4b1bd2da5be18c89201a2915aba4cf [chromium_tests] add win x64 gpu release/debug builder/tester (tikuta@chromium.org)
  https://crrev.com/9facb18cc0788b539d06741ebd6e572f29d3902b [code coverage] Process Java per-Cl coverage data for Gerrit (yliuyliu@google.com)
depot_tools:
  https://crrev.com/979fa780ce2f41fe9a3d89d74d9e8e69f88cd71d depot_tools: Make gclient_scm Python 3 compatible. (ehmaldonado@chromium.org)
recipe_engine:
  https://crrev.com/e7fec5ccb9e70bf17b7878e63052a874afa06856 Change is_luci default to True. (mmoss@google.com)
  https://crrev.com/83800d1aff85a6bfa6b5202485c8a26b44701ff5 Regenerate README from 3fd5281 (iannucci@chromium.org)


R=iannucci@chromium.org

Recipe-Tryjob-Bypass-Reason: Autoroller
Bugdroid-Send-Email: False
Change-Id: I1b3b9f93d9974ede2951864bb756355bde7d123e

--- a/recipes/recipes/master_manager_config.expected/master_manager_config.json
+++ b/recipes/recipes/master_manager_config.expected/master_manager_config.json
@@ -37,7 +37,7 @@
       "infra_internal@HEAD"
     ],
     "cwd": "[CACHE]/infra_internal_gclient_with_go",
-    "env_prefixes": {
+    "env_suffixes": {
       "PATH": [
         "RECIPE_REPO[depot_tools]"
       ]
