--- a/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
+++ b/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
@@ -2,6 +2,9 @@ cron:
 - description: push bots for admin tasks
   url: /internal/cron/push-bots-for-admin-tasks
   schedule: every 5 minutes
+- description: report metrics related to swarming bots.
+  url: /internal/cron/report-bots
+  schedule: every 5 minutes
 - description: refresh bots
   url: /internal/cron/refresh-bots
   schedule: every 5 minutes
