crosskylabadmin: enable update-device-config cron job.
BUG=chromium:979361
TEST=None

Change-Id: Ibab53665bc36ac7d63c38d9d4891a35b35e73c7a

--- a/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
+++ b/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
@@ -2,6 +2,9 @@ cron:
 - description: push bots for admin tasks
   url: /internal/cron/push-bots-for-admin-tasks
   schedule: every 5 minutes
+- description: sync device configs to inventory file and datastore
+  url: /internal/cron/update-device-configs
+  schedule: every 5 minutes
 - description: refresh bots
   url: /internal/cron/refresh-bots
   schedule: every 5 minutes
