SwarmingTracker: enable repair jobs for ready labstations.
BUG=chromium:980818
TEST=UNITTEST

Change-Id: I816c395e089e1d0574c0e1880cce57e821c983e2

--- a/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
+++ b/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
@@ -1,4 +1,7 @@
 cron:
+- description: push labstations for repair tasks
+  url: /internal/cron/push-labstations-for-repair
+  schedule: every 60 minutes
 - description: push bots for admin tasks
   url: /internal/cron/push-bots-for-admin-tasks
   schedule: every 5 minutes
