crosskylabadmin: enable ReportBots cron job.
BUG=chromium:990440
TEST=None

Change-Id: Iac28ff1524bf961ef90d9b51338e5e32a79497eb

--- a/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
+++ b/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
@@ -8,6 +8,9 @@ cron:
 - description: sync device configs to inventory file and datastore
   url: /internal/cron/update-device-configs
   schedule: every 5 minutes
+- description: report metrics related to swarming bots.
+  url: /internal/cron/report-bots
+  schedule: every 5 minutes
 - description: refresh bots
   url: /internal/cron/refresh-bots
   schedule: every 5 minutes
