[test-results] Add proper int64 build ID column
Bug: 999210
Change-Id: Iff7c0b33f39e0696a48a1bc29b4826bd933117b2

--- a/go/src/infra/appengine/test-results/Makefile
+++ b/go/src/infra/appengine/test-results/Makefile
@@ -24,6 +24,12 @@ test:
 devserver:
 	dev_appserver.py frontend/app.yaml
 
+update_bq_staging:
+	bqschemaupdater -table test-results-test-hrd.events.test_results -message-dir model/gen/ -message testresults.events.TestResultEvent
+
+update_bq_prod:
+	bqschemaupdater -table test-results-hrd.events.test_results -message-dir model/gen/ -message testresults.events.TestResultEvent
+
 deploy_staging:
 	gae.py upload -A test-results-test-hrd
 
