[Flakiness] Attempt to fix exceeding memory issue when querying cq hidden flakes.
1. Reads and stores all rows for hidden flake occurrences, then .
2. updating related flakes' tags page by page.

Bug: 1001704
Change-Id: I6e9938a14c0084944ed347292255c46d106cfaf7

--- a/appengine/findit/index.yaml
+++ b/appengine/findit/index.yaml
@@ -194,6 +194,11 @@ indexes:
   - name: time_happened
     direction: desc
 
+- kind: FlakeOccurrence
+  properties:
+  - name: flake_type
+  - name: time_detected
+
 # For updating flake count and score.
 - kind: FlakeOccurrence
   ancestor: yes
